// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The apply button should render a Resume Application button if an application revision exists with draft status and the application window is open 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/disclaimer",
      "query": Object {
        "applicationId": "foo",
        "hasSwrsReport": true,
        "versionNumber": 1,
      },
    }
  }
  passHref={true}
>
  <Button
    active={false}
    disabled={false}
    variant="primary"
  >
    Resume CIIP application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with approved status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/view",
      "query": Object {
        "applicationId": "foo",
        "versionNumber": 1,
      },
    }
  }
  passHref={true}
>
  <Button
    active={false}
    disabled={false}
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with rejected status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/view",
      "query": Object {
        "applicationId": "foo",
        "versionNumber": 1,
      },
    }
  }
  passHref={true}
>
  <Button
    active={false}
    disabled={false}
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with requested changes status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/view",
      "query": Object {
        "applicationId": "foo",
        "versionNumber": 1,
      },
    }
  }
  passHref={true}
>
  <Button
    active={false}
    disabled={false}
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with submitted status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/view",
      "query": Object {
        "applicationId": "foo",
        "versionNumber": 1,
      },
    }
  }
  passHref={true}
>
  <Button
    active={false}
    disabled={false}
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a warning modal if no swrs report exists 1`] = `
<Fragment>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    dialogAs={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "ModalDialog",
        "render": [Function],
      }
    }
    enforceFocus={true}
    keyboard={true}
    onHide={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      closeButton={false}
      closeLabel="Close"
    >
      <ModalTitle>
        Attention: Missing Emissions Report
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <p>
        We can't find an emissions report for
         
        2018
         for this facility in our records.
      </p>
      <p>
        It may take approximately 
        <strong>
          10 business days
        </strong>
         from the time you submitted the emissions report to the Single Window Reporting System (SWRS) for the data to be imported into the CIIP application system.
      </p>
      <p>
        You may cancel your application now and try again later. If you choose to proceed without the imported SWRS data, you will need to manually enter the applicable data as it was reported in SWRS. You may also see warnings regarding the entered information not matching the SWRS report.
      </p>
      <p>
        Note, submission of a CIIP application does not constitute meeting reporting obligations as required under the
         
        <a
          href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/14029_01"
        >
          <em>
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
         
        or its regulations.
      </p>
      <p>
        For any questions, please 
        <a
          href="#"
        >
          contact
        </a>
         the Climate Action Secretariat at 
      </p>
    </ModalBody>
    <ModalFooter>
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        variant="danger"
      >
        Begin Application Anyway
      </Button>
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
  <Button
    active={false}
    disabled={false}
    onClick={[Function]}
    variant="primary"
  >
    Apply for CIIP for this facility
  </Button>
</Fragment>
`;

exports[`The apply button should render an Apply For CIIP button if no applicationByApplicationId exists and the application window is open 1`] = `
<Fragment>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    dialogAs={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "ModalDialog",
        "render": [Function],
      }
    }
    enforceFocus={true}
    keyboard={true}
    onHide={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      closeButton={false}
      closeLabel="Close"
    >
      <ModalTitle>
        Attention: Missing Emissions Report
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <p>
        We can't find an emissions report for
         
        2018
         for this facility in our records.
      </p>
      <p>
        It may take approximately 
        <strong>
          10 business days
        </strong>
         from the time you submitted the emissions report to the Single Window Reporting System (SWRS) for the data to be imported into the CIIP application system.
      </p>
      <p>
        You may cancel your application now and try again later. If you choose to proceed without the imported SWRS data, you will need to manually enter the applicable data as it was reported in SWRS. You may also see warnings regarding the entered information not matching the SWRS report.
      </p>
      <p>
        Note, submission of a CIIP application does not constitute meeting reporting obligations as required under the
         
        <a
          href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/14029_01"
        >
          <em>
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
         
        or its regulations.
      </p>
      <p>
        For any questions, please 
        <a
          href="#"
        >
          contact
        </a>
         the Climate Action Secretariat at 
      </p>
    </ModalBody>
    <ModalFooter>
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        variant="danger"
      >
        Begin Application Anyway
      </Button>
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
  <Button
    active={false}
    disabled={false}
    onClick={[Function]}
    variant="primary"
  >
    Apply for CIIP for this facility
  </Button>
</Fragment>
`;
